<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kusuma.catatan.NewNoteActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/new_note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="casual"
            android:hint="@string/tulis_judul_catatan_disini"
            android:padding="10dp"
            android:importantForAutofill="no"
            android:inputType="text" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:alpha=".3"
            android:background="@android:color/black" />
        <EditText
            android:id="@+id/new_note_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="top|center_vertical"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fontFamily="casual"
            android:gravity="top"
            android:hint="@string/tulis_deskripsi_disini"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:importantForAutofill="no" />
        <Button
            android:id="@+id/new_note_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/create_btn"
            android:fontFamily="casual"
            android:text="@string/buat_catatan"
            android:textColor="@android:color/white" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
